[metadata]
name = cloudutils
version = 0.1
author = Christian Benz
author_email = christian.benz@uni-weimar.de
description = Tools for the extraction of structural defects from point clouds
url = https://github.com/uncle-ben-z/cloudutils

[options]
package_dir =
    = src
packages = find:
python_required = >=3.8
install_requires =
    numpy
    open3d
    pyntcloud
    pandas
    networkx
    matplotlib
    scikit-learn
    scipy
    tqdm
    opencv-python
    laspy
    pytorch3d
    widthestimation

[options.packages.find]
where = src